@@ -21,6 +21,7 @@ Date:
         - Focus the built count and fixed count edit boxes when first opening them.
     Bugfixes:
         - Recipes no longer have excessive question marks in their names
+        - Moved mining and research bonuses have to the Preferences screen.
     Internal changes:
         - Added rudimentary tools for drawing tab controls.
 ----------------------------------------------------------------------------------------------------------------------
